[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matterbot"
version = "0.0.0"
description = "Mattermost bot and threat-intel feed automation"
readme = "README.md"
# matterbot.py uses asyncio.timeout(), which is 3.11+. The previous >=3.9 was
# already inaccurate before the AI analyst existed.
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "MatterBot contributors" }]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/uforia/matterbot/"
Repository = "https://github.com/uforia/matterbot/"
Issues = "https://github.com/uforia/matterbot/issues"

[tool.setuptools]
py-modules = ["matterbot", "matterfeed", "ai_analyst"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["commands*", "modules*"]
namespaces = true
